corrected minor spacing issue

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -387,7 +387,7 @@ cursor: pointer;
                         }
                     }
                     .skill_subskills{
-                        width: 60%;
+                        width: 50%;
                         p{
                             @include flexRow();
                             justify-content: space-between;
